# ShiftKit

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: roadmap.md  sound-packs.md
examples/sound-packs/classic-v8/: pack.json
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
