[package]
name = "shiftkit"
version = "0.1.0"
description = "Tactile audio feedback for switching AI models."
authors = ["Chromeo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
